# rtcom

./: .gitignore  CMakeLists.txt  README.md  WORKFLOW.md
src/: main.cpp
src/common/: config.cpp  config.h  sdp.cpp  sdp.h  types.h
src/media/: media_capture.cpp  media_capture.h  media_decoder.cpp  media_decoder.h  media_encoder.cpp  media_encoder.h
src/net/: io_multiplexer.cpp  io_multiplexer.h  thread_pool.cpp  thread_pool.h  udp_socket.cpp  udp_socket.h
src/rtp/: jitter_buffer.cpp  jitter_buffer.h  rtcp_handler.cpp  rtcp_handler.h  rtp_packet.cpp  rtp_packet.h  rtp_session.cpp  rtp_session.h
src/session/: session_manager.cpp  session_manager.h
src/sip/: sip_call.cpp  sip_call.h  sip_manager.cpp  sip_manager.h
test/: sip_server_test.cpp  sipp_test.cpp  test_main.cpp  uac_audio.xml  uac_client.py
